--- a/views/mixins/grid.jade
+++ b/views/mixins/grid.jade
@@ -19,6 +19,8 @@ mixin grid(id)
           +tag('{{tag}}')
 
     <br>
-    button(id="testGridButton") getUserImages
+    button(id="testUserButton") getUserImages
     <br>
-    button(id="testSearchButton") getSearchButton
+    button(id="testSearchButton") getSearchImages
+    <br>
+    button(id="testAllButton") getAllImages
