Moving buttons around

--- a/views/main.jade
+++ b/views/main.jade
@@ -13,3 +13,10 @@ block content
     div.gridContainer
       h1 Images in grid
       +grid('grid')
+
+    <br>
+    button(id="testUserButton") getUserImages
+    <br>
+    button(id="testSearchButton") getSearchImages
+    <br>
+    button(id="testAllButton") getAllImages
