make button bootsrap

--- a/views/main.jade
+++ b/views/main.jade
@@ -15,8 +15,8 @@ block content
       +grid('grid')
 
     <br>
-    button(id="testUserButton") getUserImages
+    button(id="testUserButton" class="btn btn-default") getUserImages
     <br>
-    button(id="testSearchButton") getSearchImages
+    button(id="testSearchButton" class="btn btn-default") getSearchImages
     <br>
-    button(id="testAllButton") getAllImages
+    button(id="testAllButton" class="btn btn-default") getAllImages
