--- a/views/editorTest.jade
+++ b/views/editorTest.jade
@@ -5,4 +5,4 @@ block head
   include mixins/editor.jade
 
 block content
-  +editor("/local/uploads/5443f52107ca2c94310d500f/imwatching1413739839641.jpg", "5443f52107ca2c94310d500f")
+  +editor("/local/uploads/Dsan10s/ndworldsta1414466032129.png", "544f09f0e12a7f980fe538c1")
