--- a/views/mixins/css.jade
+++ b/views/mixins/css.jade
@@ -7,3 +7,6 @@ mixin css(moduleName)
 
   else if (moduleName == 'mainpage')
     link(type="text/css", rel="stylesheet", href="stylesheets/main.css")
+
+  else if (moduleName == 'editor')
+    link(rel="stylesheet", href="stylesheets/editor.css")
