--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -71,8 +71,16 @@ table {
   padding: 5px 0;
 }
 
-.contributionError {
+.error {
   margin: 5px 0;
   padding: 5px;
   text-align: center;
+}
+
+.close {
+  margin: 5px 5px 0 5px;
+}
+
+.deleteTagForm {
+  display: inline-block;
 }
