--- a/views/mixins/editor.jade
+++ b/views/mixins/editor.jade
@@ -18,6 +18,7 @@ block head
   include tag.jade
 
 mixin editor(imgUrl, image_id)
+  div#div-user-data(data-username="#{session.user.username}")
   div#div-image-data(data-imageUrl="#{imgUrl}", data-image-id="#{image_id}")
   div(id="editor", data-ng-controller="editorController")
     div#annotationInputCont
@@ -103,7 +104,7 @@ mixin editor(imgUrl, image_id)
                         tr
                           td(width="100%")
                             span(ng-bind="viewModel.contributions.userIDToUser[contribution.user_id].username")
-                          td
+                          td(ng-if="viewModel.user.username == viewModel.creator.username")
                             form.deleteContributionForm
                               input(name="contribution_id", value="{{contribution._id}}", type="hidden")
                               button(type="submit", class="btn btn-danger")
