--- a/public/stylesheets/grid/grid.css
+++ b/public/stylesheets/grid/grid.css
@@ -1,10 +1,26 @@
 .grid .error {
   display: none;
+  width: 100%;
+  background-color: rgb(121, 32, 32);
+  color: rgb(234, 234, 234);
+  text-align:center;
+  padding: 8px 5px;
+  border-radius: 3px;
+  overflow: hidden;
+  max-width: 800px;
+  margin: 0 auto 20px auto;
+}
+
+.grid {
+}
+
+.gridItemContainer {
+  /*text-align: left;*/
 }
 
 .gridItem {
   background-color: white;
-  border-radius: 2px;
+  border-radius: 6px;
   border: 1px solid rgb(199, 199, 199);
   height: 310px;
   position: relative;
@@ -12,7 +28,7 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
   display: inline-block;
   vertical-align: top;
-  margin: 5px;
+  margin: 10px 5px;
   cursor: pointer;
 }
 
