added logout button to navbar

--- a/views/main.jade
+++ b/views/main.jade
@@ -20,6 +20,8 @@ block content
         form(id="searchForm")
           input(name="tags" type="text" placeholder="tags deliminated by ','")
           button(class="get-searched-images-form btn btn-default") search
+      div(class="navItem" id="logoutButton")
+        button(class="btn btn-primary") Logout
       div(class="navItem" id="homeButton")
         button(class="display-all-images btn btn-default") Home
       div(class="navItem" id="clearButton")
