connected grid to editor

--- a/views/editorTest.jade
+++ b/views/editorTest.jade
@@ -5,4 +5,4 @@ block head
   include mixins/editor.jade
 
 block content
-  +editor("/local/uploads/Dsan10s/ndworldsta1414466032129.png", "544f09f0e12a7f980fe538c1")
+  +editor({imgUrl: "/local/uploads/Dsan10s/ndworldsta1414466032129.png", image_id: "544f09f0e12a7f980fe538c1"})
