--- a/views/mixins/grid.jade
+++ b/views/mixins/grid.jade
@@ -13,7 +13,7 @@ mixin grid(id)
     div.error(id='errorBox')
     div.gridItemContainer
       div.gridItem(id='{{image._id}}' ng-repeat="image in viewModel.images track by $index")
-        div.image
+        div.image(ng-click="editImage(image.image_url, image._id)")
           img(ng-src='{{image.image_url}}')
         div.title
           p(ng-bind='image.title')
