--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,9 +1,11 @@
 body {
   margin: 0;
+  margin-top: -60px;
 }
 
 #medImageAppContainer {
   min-height: 100%;
+  padding-top: 60px;
 }
 
 .navBar {
@@ -56,4 +58,5 @@ body {
 
 .editorContainer {
   margin: 60px auto 0 auto;
+  height: 100%;
 }
