--- a/views/mixins/css.jade
+++ b/views/mixins/css.jade
@@ -1,3 +1,6 @@
+//- CSS mixin
+//- @author Vicky Gong
+
 mixin css(moduleName)
   if (moduleName == 'grid')
     link(type="text/css", rel="stylesheet", href="stylesheets/grid/grid.css")
