--- a/views/mixins/editor.jade
+++ b/views/mixins/editor.jade
@@ -1,3 +1,6 @@
+//- Editor mixin
+//- @author Danny Sanchez
+
 block head
   script(type="text/javascript", src="javascripts/AjaxController.js")
   script(type="text/javascript", src="javascripts/helpers/helpers.js")
