--- a/views/mixins/tag.jade
+++ b/views/mixins/tag.jade
@@ -1,2 +1,6 @@
+//- Tag mixin
+//-   Takes in the tag name associated with the tag
+//- @author Vicky Gong
+
 mixin tag(tagname)
   div.tag(class='display-searched-images')= tagname
