--- a/views/main.jade
+++ b/views/main.jade
@@ -11,23 +11,12 @@ block head
 
   include mixins/grid.jade
   include mixins/editor.jade
+  include mixins/navbar.jade
 
 block content
   div(id="medImageAppContainer", data-ng-controller='medImageAppController')
     //- Navigation bar
-    div.navBar
-      div(class="navItem")
-        button(class="display-user-images btn btn-default") User
-      div(class="navItem")
-        form(id="searchForm")
-          input(name="tags" type="text" placeholder="tags deliminated by ','")
-          button(class="get-searched-images-form btn btn-default") search
-      div(class="navItem" id="logoutButton")
-        button(class="btn btn-primary") Logout
-      div(class="navItem" id="homeButton")
-        button(class="display-all-images btn btn-default") Home
-      div(class="navItem" id="clearButton")
-        button(class="clear-images btn btn-default") clearImages
+    +navbar()
 
     //- Grid Container
     div.gridContainer(ng-if="!editing")
