--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
   div#landingPageContainer(data-ng-controller="indexController")
     h1#pageTitle= title
     div.formContainer#loginContainer(ng-show="viewModel.isLogin")
-      p.startMessage Who likes Vicky?!
+      p.startMessage Log into MedImage
       form#loginForm
         input(type="text" name="username" placeholder="Username" required)
         input(type="password" name="password" placeholder="Password" required)
