--- a/views/mixins/grid.jade
+++ b/views/mixins/grid.jade
@@ -28,7 +28,7 @@ mixin grid(id)
 
       //- Normal Images
       div.gridItem(id='{{image._id}}' ng-repeat="image in viewModel.images track by $index")
-        div.image(ng-click="editImage(image.image_url, image._id)")
+        div.image(ng-click="editImage(image.image_url, image._id, image.title)")
           img(ng-src='{{image.image_url}}')
         div.title
           p(ng-bind='image.title')
