--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -102,3 +102,21 @@ table {
 #deleteImg {
   width: 100%;
 }
+
+#titleInput {
+  font-size: 32px;
+  height: auto;
+  border: 1px solid transparent;
+  background-color: transparent;
+}
+
+#titleInput:hover {
+  border: 1px solid #ccc;
+}
+
+.form-control.inputError {
+  border-color: #BB0000;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(171, 0, 0);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(171, 0, 0);
+}
