--- a/views/mixins/editor.jade
+++ b/views/mixins/editor.jade
@@ -47,7 +47,7 @@ mixin editor()
                     td
                       legend
                         h1(ng-if="!viewModel.isCreator", ng-bind="imgTitle")
-                        input#titleInput.form-control(name="title", value="{{imgTitle}}")
+                        input#titleInput.form-control(ng-if="viewModel.isCreator", value="{{imgTitle}}")
                   tr#controlsRow
                     td
                       legend
