--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -110,11 +110,15 @@ table {
   background-color: transparent;
 }
 
+#titleInput:focus, #titleInput:hover:focus {
+  border-color: #66afe9;
+}
+
 #titleInput:hover {
   border: 1px solid #ccc;
 }
 
-.form-control.inputError {
+.form-control.inputError, #titleInput.form-control.inputError {
   border-color: #BB0000;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(171, 0, 0);
